# Learning-In-UESTC

./: .gitignore  README.md
0 General/: 2023-2024学年信息与软件工程学院本科生综合素质测评及奖学金评选实施细则.rar
0-通用/: 成电讲坛观后感.txt  留学PPT.pptx  竞赛.pptx  课堂报告模版.pptx  软件学院请假条（模板）.docx
0-通用/一些文件/: 实训学分认定.docx
0-通用/课程、综测、保研等/: 2023-2024学年信息与软件工程学院本科生发展性素质加分细则.xlsx
1 大一 Freshman/: README.MD
1 大一 Freshman/02 PBLF/: README.md
1 大一 Freshman/02 PBLF/01 张学-计算器/07 Mr.T——Clion——80%~99%/: CMakeLists.txt  Stack.c  linked-list.c
1 大一 Freshman/05 英语/: 四级简介 (2023).pptx
1 大一 Freshman/06 思修/: README.md  思修复习提纲整理.doc
1 大一 Freshman/08 形势与政策/: 形势与政策.md
1 大一 Freshman/PBLF/: README.md
1 大一 Freshman/U校园/: README.md  U校园-新一代大学英语视听说教程 提高篇1.md
1 大一 Freshman/icoding/: README.md
1 大一 Freshman/其他/: 培养方案.md
1 大一 Freshman/大一上教材及复习资料/: C语言知识点总结(1).doc  思修整理by成惠团队.docx
1 大一 Freshman/形势与政策/: 形势与政策.md
1-大一上/01 C语言/: readme.md
1-大一上/02 PBLF/: README.md
1-大一上/05 英语/: README.md
1-大一上/06 思修/: 2018思修期末试卷及答案.doc  2024最新.docx  思修考试题库-选择题.doc
1-大一上/07 军事理论/: readme.md
1-大一上/09 心理/: README.MD
2 Freshman/: READNE.MD
2 Freshman/03 概率论/: 第四章作业参考答案.pptx
2 Freshman/05 英语/: 02-2023级第二学期通识英语期末考试说明.pptx  英语慕课词汇汇总.txt
2 Freshman/06 近现代史/: 董1.docx  董2.docx  近代史复习资料10页.docx  近代史复习鸡腿19页.docx
2-大一下/: readme.md
2-大一下/01 数据结构/: readme.md
2-大一下/03 离散数学/: readme.md
2-大一下/05 英语/: 慕课词汇复习.html
2-大一下/06 近现代史/: 《中国近代史纲要》复习提纲.docx  中国近现代史纲要历年真题.docx  大一近代史复习资料归纳.docx
3-大二上/互+/: README.md
3-大二上/概率论/: MOOC课说明.docx  第五章作业参考答案.pptx  统计部分习题参考答案.pptx
3-大二上/电子电路基础/: CH1-电路的基本概念(2024).pptx  CH4-单管放大电路2024.pptx  (+7 more)
(+1133 files in other folders)
